--- a/CEMEX.API/CEMEX.API.csproj
+++ b/CEMEX.API/CEMEX.API.csproj
@@ -162,11 +162,13 @@
     <Compile Include="App_Start\Bootstrapper.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\Catalogos\DistritoController.cs" />
+    <Compile Include="Controllers\Catalogos\EstadosController.cs" />
+    <Compile Include="Controllers\Catalogos\MunicipiosController.cs" />
     <Compile Include="Controllers\Catalogos\PlazaImmexController.cs" />
+    <Compile Include="Controllers\Catalogos\PlazaOxxoController.cs" />
     <Compile Include="Controllers\Catalogos\RegionController.cs" />
-    <Compile Include="Controllers\EstadosController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\MunicipiosController.cs" />
     <Compile Include="Controllers\Seguridad\JerarquiasController.cs" />
     <Compile Include="Controllers\Seguridad\ModulosController.cs" />
     <Compile Include="Controllers\Seguridad\PermisosController.cs" />
@@ -193,10 +195,13 @@
     <Compile Include="Infrastructure\Validators\Seguridad\UsuarioViewModelValidator.cs" />
     <Compile Include="Mappings\AutoMapperConfiguration.cs" />
     <Compile Include="Mappings\DomainToViewModelMappingProfile.cs" />
+    <Compile Include="Models\Catalogos\DistritoViewModel.cs" />
     <Compile Include="Models\Catalogos\EstadoViewModel.cs" />
     <Compile Include="Models\Catalogos\MunicipioViewModel.cs" />
     <Compile Include="Models\Catalogos\PlazaImmexViewModel.cs" />
+    <Compile Include="Models\Catalogos\PlazaOxxoViewModel.cs" />
     <Compile Include="Models\Catalogos\RegionViewModel.cs" />
+    <Compile Include="Models\Catalogos\TiendaViewModel.cs" />
     <Compile Include="Models\Seguridad\CredentialViewModel.cs" />
     <Compile Include="Models\Seguridad\DetalleModuloPermisoViewModel.cs" />
     <Compile Include="Models\Seguridad\JerarquiaViewModel.cs" />
