--- a/CEMEX.Data/App.config
+++ b/CEMEX.Data/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="Cemex" connectionString="Data Source=WIN-RJ9DOE3K4L1\SQLEXPRESS;Initial Catalog=CemexApi;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="Cemex" connectionString="Data Source=DESARROLLO11\SQLEXPRESS;Initial Catalog=CemexApi;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings> 
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
