Nueva Version Base de Datos

--- a/CEMEX.API/CEMEX.API.csproj
+++ b/CEMEX.API/CEMEX.API.csproj
@@ -217,6 +217,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <None Include="Properties\PublishProfiles\aarturock92.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
