--- a/CEMEX.API/packages.config
+++ b/CEMEX.API/packages.config
@@ -3,8 +3,10 @@
   <package id="Autofac" version="3.5.0" targetFramework="net45" />
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net45" />
   <package id="AutoMapper" version="6.0.2" targetFramework="net45" />
+  <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="FluentValidation" version="6.4.1" targetFramework="net45" />
+  <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
@@ -22,6 +24,7 @@
   <package id="Microsoft.IdentityModel.Tokens" version="5.1.3" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.1.3" targetFramework="net452" />
 </packages>
