--- a/CEMEX.API/CEMEX.API.csproj
+++ b/CEMEX.API/CEMEX.API.csproj
@@ -174,6 +174,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\Catalogos\DistritoController.cs" />
     <Compile Include="Controllers\Catalogos\EstadosController.cs" />
+    <Compile Include="Controllers\Catalogos\MovilController.cs" />
     <Compile Include="Controllers\Catalogos\MunicipiosController.cs" />
     <Compile Include="Controllers\Catalogos\PlazaImmexController.cs" />
     <Compile Include="Controllers\Catalogos\PlazaOxxoController.cs" />
@@ -202,6 +203,7 @@
     <Compile Include="Infrastructure\Filters\BearerAuthenticationFilter.cs" />
     <Compile Include="Infrastructure\MessageHandlers\CemexAuthHandler.cs" />
     <Compile Include="Infrastructure\MessageHandlers\SlidingExpirationHandler.cs" />
+    <Compile Include="Infrastructure\Validators\Catalogos\MovilViewModelValidator.cs" />
     <Compile Include="Infrastructure\Validators\EstadoViewModelValidator.cs" />
     <Compile Include="Infrastructure\Validators\MunicipioViewModelValidator.cs" />
     <Compile Include="Infrastructure\Validators\Seguridad\CredentialViewModelValidator.cs" />
@@ -212,6 +214,7 @@
     <Compile Include="Mappings\DomainToViewModelMappingProfile.cs" />
     <Compile Include="Models\Catalogos\DistritoViewModel.cs" />
     <Compile Include="Models\Catalogos\EstadoViewModel.cs" />
+    <Compile Include="Models\Catalogos\MovilViewModel.cs" />
     <Compile Include="Models\Catalogos\MunicipioViewModel.cs" />
     <Compile Include="Models\Catalogos\PlazaImmexViewModel.cs" />
     <Compile Include="Models\Catalogos\PlazaOxxoViewModel.cs" />
