--- a/CEMEX.Data/CEMEX.Data.csproj
+++ b/CEMEX.Data/CEMEX.Data.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Configurations\Seguridad\UsuarioConfiguration.cs" />
     <Compile Include="Configurations\Seguridad\UsuarioRolConfiguration.cs" />
     <Compile Include="Extensions\Catalogos\DistritoExtensions.cs" />
+    <Compile Include="Extensions\Catalogos\MovilExtensions.cs" />
     <Compile Include="Extensions\Catalogos\PlazaImmexExtensions.cs" />
     <Compile Include="Extensions\Catalogos\PlazaOxxoExtensions.cs" />
     <Compile Include="Extensions\Catalogos\RegionExtensions.cs" />
