--- a/CEMEX.Data/CEMEX.Data.csproj
+++ b/CEMEX.Data/CEMEX.Data.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CemexContext.cs" />
+    <Compile Include="Configurations\App\MenuConfiguration.cs" />
     <Compile Include="Configurations\Catalogos\DistritoConfiguration.cs" />
     <Compile Include="Configurations\Catalogos\EstadoConfiguration.cs" />
     <Compile Include="Configurations\Catalogos\MovilConfiguration.cs" />
@@ -60,15 +61,11 @@
     <Compile Include="Configurations\Catalogos\RegionConfiguration.cs" />
     <Compile Include="Configurations\Catalogos\TiendaConfiguration.cs" />
     <Compile Include="Configurations\EntityBaseConfiguration.cs" />
-    <Compile Include="Configurations\Seguridad\DetalleModuloPermisoConfiguration.cs" />
-    <Compile Include="Configurations\Seguridad\DetalleRolPermisoConfiguration.cs" />
+    <Compile Include="Configurations\Seguridad\DetalleMenuPermisoConfiguration.cs" />
     <Compile Include="Configurations\Seguridad\JerarquiaConfiguration.cs" />
-    <Compile Include="Configurations\Seguridad\ModuloConfiguration.cs" />
     <Compile Include="Configurations\Seguridad\PerfilUsuarioConfiguration.cs" />
     <Compile Include="Configurations\Seguridad\PermisoConfiguration.cs" />
-    <Compile Include="Configurations\Seguridad\RolConfiguration.cs" />
     <Compile Include="Configurations\Seguridad\UsuarioConfiguration.cs" />
-    <Compile Include="Configurations\Seguridad\UsuarioRolConfiguration.cs" />
     <Compile Include="Extensions\Catalogos\DistritoExtensions.cs" />
     <Compile Include="Extensions\Catalogos\MovilExtensions.cs" />
     <Compile Include="Extensions\Catalogos\PlazaImmexExtensions.cs" />
@@ -106,6 +103,18 @@
     <Compile Include="Migrations\201706021730006_Update entity Movil.Designer.cs">
       <DependentUpon>201706021730006_Update entity Movil.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706091804087_Init Migration.cs" />
+    <Compile Include="Migrations\201706091804087_Init Migration.Designer.cs">
+      <DependentUpon>201706091804087_Init Migration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706091809011_Add schema entity Error.cs" />
+    <Compile Include="Migrations\201706091809011_Add schema entity Error.Designer.cs">
+      <DependentUpon>201706091809011_Add schema entity Error.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706091811285_Add schema entities Permisos, DetalleMenuPermiso.cs" />
+    <Compile Include="Migrations\201706091811285_Add schema entities Permisos, DetalleMenuPermiso.Designer.cs">
+      <DependentUpon>201706091811285_Add schema entities Permisos, DetalleMenuPermiso.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\EntityBaseRepository.cs" />
@@ -139,6 +148,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706021730006_Update entity Movil.resx">
       <DependentUpon>201706021730006_Update entity Movil.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706091804087_Init Migration.resx">
+      <DependentUpon>201706091804087_Init Migration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706091809011_Add schema entity Error.resx">
+      <DependentUpon>201706091809011_Add schema entity Error.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706091811285_Add schema entities Permisos, DetalleMenuPermiso.resx">
+      <DependentUpon>201706091811285_Add schema entities Permisos, DetalleMenuPermiso.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
