--- a/CEMEX.Entidades/CEMEX.Entidades.csproj
+++ b/CEMEX.Entidades/CEMEX.Entidades.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App\Menu.cs" />
     <Compile Include="Catalogos\Distrito.cs" />
     <Compile Include="Catalogos\Estado.cs" />
     <Compile Include="Catalogos\Movil.cs" />
@@ -53,16 +54,13 @@
     <Compile Include="EntidadBase.cs" />
     <Compile Include="IEntidadBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Seguridad\DetalleModuloPermiso.cs" />
-    <Compile Include="Seguridad\DetalleRolPermiso.cs" />
+    <Compile Include="Seguridad\DetalleMenuPermiso.cs" />
+    <Compile Include="Seguridad\DetallePerfilUsuarioMenu.cs" />
     <Compile Include="Seguridad\Error.cs" />
     <Compile Include="Seguridad\Jerarquia.cs" />
-    <Compile Include="Seguridad\Modulo.cs" />
     <Compile Include="Seguridad\PerfilUsuario.cs" />
     <Compile Include="Seguridad\Permiso.cs" />
-    <Compile Include="Seguridad\Rol.cs" />
     <Compile Include="Seguridad\Usuario.cs" />
-    <Compile Include="Seguridad\UsuarioRol.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
