--- a/CEMEX.Data/CEMEX.Data.csproj
+++ b/CEMEX.Data/CEMEX.Data.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Configurations\Catalogos\TiendaConfiguration.cs" />
     <Compile Include="Configurations\EntityBaseConfiguration.cs" />
     <Compile Include="Configurations\Seguridad\DetalleMenuPermisoConfiguration.cs" />
+    <Compile Include="Configurations\Seguridad\DetallePerfilUsuarioMenuConfiguration.cs" />
     <Compile Include="Configurations\Seguridad\JerarquiaConfiguration.cs" />
     <Compile Include="Configurations\Seguridad\PerfilUsuarioConfiguration.cs" />
     <Compile Include="Configurations\Seguridad\PermisoConfiguration.cs" />
@@ -79,41 +80,9 @@
     <Compile Include="Infrastructure\IDbFactory.cs" />
     <Compile Include="Infrastructure\IUnitOfWork.cs" />
     <Compile Include="Infrastructure\UnitOfWork.cs" />
-    <Compile Include="Migrations\201705161551505_initial migration.cs" />
-    <Compile Include="Migrations\201705161551505_initial migration.Designer.cs">
-      <DependentUpon>201705161551505_initial migration.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201705312046470_Create Entity PerfilUsuario.cs" />
-    <Compile Include="Migrations\201705312046470_Create Entity PerfilUsuario.Designer.cs">
-      <DependentUpon>201705312046470_Create Entity PerfilUsuario.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201705312108134_Add schema and configure name table.cs" />
-    <Compile Include="Migrations\201705312108134_Add schema and configure name table.Designer.cs">
-      <DependentUpon>201705312108134_Add schema and configure name table.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201705312202435_Add schema Jerarquia.cs" />
-    <Compile Include="Migrations\201705312202435_Add schema Jerarquia.Designer.cs">
-      <DependentUpon>201705312202435_Add schema Jerarquia.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201706011830289_Create entity Movil.cs" />
-    <Compile Include="Migrations\201706011830289_Create entity Movil.Designer.cs">
-      <DependentUpon>201706011830289_Create entity Movil.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201706021730006_Update entity Movil.cs" />
-    <Compile Include="Migrations\201706021730006_Update entity Movil.Designer.cs">
-      <DependentUpon>201706021730006_Update entity Movil.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201706091804087_Init Migration.cs" />
-    <Compile Include="Migrations\201706091804087_Init Migration.Designer.cs">
-      <DependentUpon>201706091804087_Init Migration.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201706091809011_Add schema entity Error.cs" />
-    <Compile Include="Migrations\201706091809011_Add schema entity Error.Designer.cs">
-      <DependentUpon>201706091809011_Add schema entity Error.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201706091811285_Add schema entities Permisos, DetalleMenuPermiso.cs" />
-    <Compile Include="Migrations\201706091811285_Add schema entities Permisos, DetalleMenuPermiso.Designer.cs">
-      <DependentUpon>201706091811285_Add schema entities Permisos, DetalleMenuPermiso.cs</DependentUpon>
+    <Compile Include="Migrations\201706111929404_Init Migration.cs" />
+    <Compile Include="Migrations\201706111929404_Init Migration.Designer.cs">
+      <DependentUpon>201706111929404_Init Migration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -131,32 +100,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201705161551505_initial migration.resx">
-      <DependentUpon>201705161551505_initial migration.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201705312046470_Create Entity PerfilUsuario.resx">
-      <DependentUpon>201705312046470_Create Entity PerfilUsuario.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201705312108134_Add schema and configure name table.resx">
-      <DependentUpon>201705312108134_Add schema and configure name table.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201705312202435_Add schema Jerarquia.resx">
-      <DependentUpon>201705312202435_Add schema Jerarquia.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201706011830289_Create entity Movil.resx">
-      <DependentUpon>201706011830289_Create entity Movil.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201706021730006_Update entity Movil.resx">
-      <DependentUpon>201706021730006_Update entity Movil.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201706091804087_Init Migration.resx">
-      <DependentUpon>201706091804087_Init Migration.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201706091809011_Add schema entity Error.resx">
-      <DependentUpon>201706091809011_Add schema entity Error.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201706091811285_Add schema entities Permisos, DetalleMenuPermiso.resx">
-      <DependentUpon>201706091811285_Add schema entities Permisos, DetalleMenuPermiso.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201706111929404_Init Migration.resx">
+      <DependentUpon>201706111929404_Init Migration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
