--- a/CEMEX.Data/CEMEX.Data.csproj
+++ b/CEMEX.Data/CEMEX.Data.csproj
@@ -84,6 +84,10 @@
     <Compile Include="Migrations\201706111929404_Init Migration.Designer.cs">
       <DependentUpon>201706111929404_Init Migration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706112001598_Add register by default.cs" />
+    <Compile Include="Migrations\201706112001598_Add register by default.Designer.cs">
+      <DependentUpon>201706112001598_Add register by default.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\EntityBaseRepository.cs" />
@@ -102,6 +106,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201706111929404_Init Migration.resx">
       <DependentUpon>201706111929404_Init Migration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706112001598_Add register by default.resx">
+      <DependentUpon>201706112001598_Add register by default.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
