--- a/CEMEX.API/CEMEX.API.csproj
+++ b/CEMEX.API/CEMEX.API.csproj
@@ -211,6 +211,7 @@
     <Compile Include="Infrastructure\Validators\Seguridad\UsuarioViewModelValidator.cs" />
     <Compile Include="Mappings\AutoMapperConfiguration.cs" />
     <Compile Include="Mappings\DomainToViewModelMappingProfile.cs" />
+    <Compile Include="Models\Aplicacion\MenuViewModel.cs" />
     <Compile Include="Models\Catalogos\DistritoViewModel.cs" />
     <Compile Include="Models\Catalogos\EstadoViewModel.cs" />
     <Compile Include="Models\Catalogos\MovilViewModel.cs" />
