--- a/CEMEX.Data/CEMEX.Data.csproj
+++ b/CEMEX.Data/CEMEX.Data.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Configurations\EntityBaseConfiguration.cs" />
     <Compile Include="Configurations\Seguridad\DetalleMenuPermisoConfiguration.cs" />
     <Compile Include="Configurations\Seguridad\DetallePerfilUsuarioMenuConfiguration.cs" />
+    <Compile Include="Configurations\Seguridad\DetalleUsuarioAsignacionConfiguration.cs" />
     <Compile Include="Configurations\Seguridad\JerarquiaConfiguration.cs" />
     <Compile Include="Configurations\Seguridad\PerfilUsuarioConfiguration.cs" />
     <Compile Include="Configurations\Seguridad\PermisoConfiguration.cs" />
@@ -93,6 +94,10 @@
     <Compile Include="Migrations\201706141644435_Change property in entity Distrito .Designer.cs">
       <DependentUpon>201706141644435_Change property in entity Distrito .cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706142238170_Add relation entity Usuario with DetalleUsuarioAsignacion.cs" />
+    <Compile Include="Migrations\201706142238170_Add relation entity Usuario with DetalleUsuarioAsignacion.Designer.cs">
+      <DependentUpon>201706142238170_Add relation entity Usuario with DetalleUsuarioAsignacion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\EntityBaseRepository.cs" />
@@ -117,6 +122,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706141644435_Change property in entity Distrito .resx">
       <DependentUpon>201706141644435_Change property in entity Distrito .cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706142238170_Add relation entity Usuario with DetalleUsuarioAsignacion.resx">
+      <DependentUpon>201706142238170_Add relation entity Usuario with DetalleUsuarioAsignacion.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
