--- a/CEMEX.Entidades/CEMEX.Entidades.csproj
+++ b/CEMEX.Entidades/CEMEX.Entidades.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seguridad\DetalleMenuPermiso.cs" />
     <Compile Include="Seguridad\DetallePerfilUsuarioMenu.cs" />
+    <Compile Include="Seguridad\DetalleUsuarioAsignacion.cs" />
     <Compile Include="Seguridad\Error.cs" />
     <Compile Include="Seguridad\Jerarquia.cs" />
     <Compile Include="Seguridad\PerfilUsuario.cs" />
