--- a/CEMEX.Data/CEMEX.Data.csproj
+++ b/CEMEX.Data/CEMEX.Data.csproj
@@ -100,6 +100,10 @@
     <Compile Include="Migrations\201706142238170_Add relation entity Usuario with DetalleUsuarioAsignacion.Designer.cs">
       <DependentUpon>201706142238170_Add relation entity Usuario with DetalleUsuarioAsignacion.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706170333291_Init Migration.cs" />
+    <Compile Include="Migrations\201706170333291_Init Migration.Designer.cs">
+      <DependentUpon>201706170333291_Init Migration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\EntityBaseRepository.cs" />
@@ -127,6 +131,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706142238170_Add relation entity Usuario with DetalleUsuarioAsignacion.resx">
       <DependentUpon>201706142238170_Add relation entity Usuario with DetalleUsuarioAsignacion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706170333291_Init Migration.resx">
+      <DependentUpon>201706170333291_Init Migration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
