--- a/CEMEX.Data/CEMEX.Data.csproj
+++ b/CEMEX.Data/CEMEX.Data.csproj
@@ -104,6 +104,10 @@
     <Compile Include="Migrations\201706170333291_Init Migration.Designer.cs">
       <DependentUpon>201706170333291_Init Migration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706170409327_Add Perfiles Default.cs" />
+    <Compile Include="Migrations\201706170409327_Add Perfiles Default.Designer.cs">
+      <DependentUpon>201706170409327_Add Perfiles Default.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\EntityBaseRepository.cs" />
@@ -134,6 +138,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706170333291_Init Migration.resx">
       <DependentUpon>201706170333291_Init Migration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706170409327_Add Perfiles Default.resx">
+      <DependentUpon>201706170409327_Add Perfiles Default.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
