--- a/CEMEX.Data/ENCUESTA.Data.csproj
+++ b/CEMEX.Data/ENCUESTA.Data.csproj
@@ -94,9 +94,9 @@
     <Compile Include="Repositories\IEntityBaseRepository.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CEMEX.Entidades\CEMEX.Entidades.csproj">
+    <ProjectReference Include="..\CEMEX.Entidades\ENCUESTA.Entidades.csproj">
       <Project>{23c95db5-346c-4238-8108-a91f46be21dc}</Project>
-      <Name>CEMEX.Entidades</Name>
+      <Name>ENCUESTA.Entidades</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
