--- a/CEMEX.Entidades/ENCUESTA.Entidades.csproj
+++ b/CEMEX.Entidades/ENCUESTA.Entidades.csproj
@@ -50,10 +50,16 @@
     <Compile Include="Catalogos\PlazaOxxo.cs" />
     <Compile Include="Catalogos\Region.cs" />
     <Compile Include="Catalogos\Tienda.cs" />
+    <Compile Include="Catalogos\TipoEncuesta.cs" />
     <Compile Include="Catalogos\Vehiculo.cs" />
     <Compile Include="Codes.cs" />
     <Compile Include="EntidadBase.cs" />
     <Compile Include="IEntidadBase.cs" />
+    <Compile Include="Operacion\DetalleRespuesta.cs" />
+    <Compile Include="Operacion\Encuesta.cs" />
+    <Compile Include="Operacion\Pregunta.cs" />
+    <Compile Include="Operacion\Respuesta.cs" />
+    <Compile Include="Operacion\Seccion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seguridad\DetalleMenuPermiso.cs" />
     <Compile Include="Seguridad\DetallePerfilUsuarioMenu.cs" />
